dependency 취약점 개선

--- a/common/web/pom.xml
+++ b/common/web/pom.xml
@@ -54,10 +54,20 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- JWT -->
+        <!-- JWT (JJWT 0.11.5 - 3개의 artifact 필요) -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
+            <artifactId>jjwt-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
+            <scope>runtime</scope>
         </dependency>
 
         <!-- Jackson -->
@@ -74,6 +84,12 @@
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
+        </dependency>
+
+        <!-- Java Annotations (PostConstruct, PreDestroy 등) -->
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
         </dependency>
 
         <!-- Logging -->
