--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>pom</packaging>
 
     <name>Backend Multi-Module Project</name>
-    <description>Backend multi-module project with Spring Framework 4.3.30</description>
+    <description>Backend multi-module project with Spring Framework 5.3.39</description>
 
     <modules>
         <module>common/core</module>
@@ -30,68 +30,92 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
 
-        <!-- Spring Framework -->
-        <spring.version>4.3.30.RELEASE</spring.version>
-        <spring-security.version>4.2.13.RELEASE</spring-security.version>
+        <!-- ========================================
+             Spring Framework 5.3.x LTS
+             ======================================== -->
+        <spring.version>5.3.39</spring.version>
+        <spring-security.version>5.8.13</spring-security.version>
         
         <!-- Spring Boot (for batch & worker) -->
         <spring-boot.version>2.7.18</spring-boot.version>
 
-        <!-- Logging -->
+        <!-- ========================================
+             Security & Authentication
+             ======================================== -->
+        <!-- JWT (JJWT 0.11.5 - CVE 수정) -->
+        <jjwt-api.version>0.11.5</jjwt-api.version>
+        <jjwt-impl.version>0.11.5</jjwt-impl.version>
+        <jjwt-jackson.version>0.11.5</jjwt-jackson.version>
+
+        <!-- ========================================
+             Logging
+             ======================================== -->
         <slf4j.version>1.7.36</slf4j.version>
         <logback.version>1.2.13</logback.version>
 
-        <!-- Servlet -->
-        <servlet-api.version>3.1.0</servlet-api.version>
-
-        <!-- JWT -->
-        <jjwt.version>0.9.1</jjwt.version>
-
-        <!-- Utility -->
-        <commons-lang3.version>3.12.0</commons-lang3.version>
-
-        <!-- Swagger -->
-        <springfox.version>2.9.2</springfox.version>
-
-        <!-- Jackson -->
-        <jackson.version>2.9.10</jackson.version>
-
-        <!-- Kafka -->
-        <kafka.version>2.8.2</kafka.version>
-        <spring-kafka.version>1.3.11.RELEASE</spring-kafka.version>
-
-        <!-- Redis / Jedis -->
-        <jedis.version>2.9.0</jedis.version>
-        <spring-data-redis.version>1.8.23.RELEASE</spring-data-redis.version>
-
-        <!-- JSP/JSTL -->
+        <!-- ========================================
+             Web & Servlet
+             ======================================== -->
+        <servlet-api.version>4.0.1</servlet-api.version>
         <jsp-api.version>2.3.3</jsp-api.version>
         <jstl.version>1.2</jstl.version>
 
-        <!-- Thymeleaf -->
-        <thymeleaf.version>3.0.15.RELEASE</thymeleaf.version>
-        <thymeleaf-spring4.version>3.0.15.RELEASE</thymeleaf-spring4.version>
+        <!-- ========================================
+             JSON Processing (Jackson - CVE 수정)
+             ======================================== -->
+        <jackson.version>2.15.4</jackson.version>
 
-        <!-- AspectJ -->
-        <aspectj.version>1.9.7</aspectj.version>
+        <!-- ========================================
+             Template Engine
+             ======================================== -->
+        <thymeleaf.version>3.1.2.RELEASE</thymeleaf.version>
+        <thymeleaf-spring5.version>3.1.2.RELEASE</thymeleaf-spring5.version>
 
-        <!-- Connection Pool -->
-        <hikaricp.version>4.0.3</hikaricp.version>
+        <!-- ========================================
+             API Documentation
+             ======================================== -->
+        <springfox.version>2.9.2</springfox.version>
 
-        <!-- MyBatis -->
-        <mybatis.version>3.5.13</mybatis.version>
-        <mybatis-spring.version>1.3.3</mybatis-spring.version>
+        <!-- ========================================
+             Messaging & Cache
+             ======================================== -->
+        <!-- Kafka -->
+        <kafka.version>3.6.1</kafka.version>
+        <spring-kafka.version>2.9.13</spring-kafka.version>
 
-        <!-- Lombok -->
-        <lombok.version>1.18.30</lombok.version>
+        <!-- Redis -->
+        <jedis.version>3.10.0</jedis.version>
+        <spring-data-redis.version>2.7.18</spring-data-redis.version>
 
-        <!-- Validation -->
+        <!-- ========================================
+             Database & Persistence
+             ======================================== -->
+        <mybatis.version>3.5.16</mybatis.version>
+        <mybatis-spring.version>2.1.2</mybatis-spring.version>
+        <hikaricp.version>5.1.0</hikaricp.version>
+
+        <!-- ========================================
+             Utilities
+             ======================================== -->
+        <commons-lang3.version>3.14.0</commons-lang3.version>
+        <lombok.version>1.18.34</lombok.version>
+
+        <!-- ========================================
+             AOP & AspectJ
+             ======================================== -->
+        <aspectj.version>1.9.22</aspectj.version>
+
+        <!-- ========================================
+             Validation
+             ======================================== -->
         <validation-api.version>2.0.1.Final</validation-api.version>
         <hibernate-validator.version>6.2.5.Final</hibernate-validator.version>
 
-        <!-- Test -->
+        <!-- ========================================
+             Testing
+             ======================================== -->
         <junit.version>4.13.2</junit.version>
-        <mockito.version>3.12.4</mockito.version>
+        <mockito.version>4.11.0</mockito.version>
     </properties>
 
     <dependencyManagement>
@@ -232,15 +256,27 @@
             </dependency>
             <dependency>
                 <groupId>org.thymeleaf</groupId>
-                <artifactId>thymeleaf-spring4</artifactId>
-                <version>${thymeleaf-spring4.version}</version>
+                <artifactId>thymeleaf-spring5</artifactId>
+                <version>${thymeleaf-spring5.version}</version>
             </dependency>
 
-            <!-- JWT -->
+            <!-- JWT (JJWT 0.11.5 - 3개의 artifact 필요) -->
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
-                <artifactId>jjwt</artifactId>
-                <version>${jjwt.version}</version>
+                <artifactId>jjwt-api</artifactId>
+                <version>${jjwt-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-impl</artifactId>
+                <version>${jjwt-impl.version}</version>
+                <scope>runtime</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-jackson</artifactId>
+                <version>${jjwt-jackson.version}</version>
+                <scope>runtime</scope>
             </dependency>
 
             <!-- Utility -->
@@ -357,6 +393,13 @@
                 <groupId>org.hibernate.validator</groupId>
                 <artifactId>hibernate-validator</artifactId>
                 <version>${hibernate-validator.version}</version>
+            </dependency>
+
+            <!-- Java Annotations (PostConstruct, PreDestroy 등) -->
+            <dependency>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>1.3.2</version>
             </dependency>
 
             <!-- Test -->
