--- a/app/api/src/main/resources/application.properties
+++ b/app/api/src/main/resources/application.properties
@@ -1,22 +1,14 @@
-# Application Configuration
-# Maven profile에서 주입됨 + Redis, Kafka 프로파일 활성화
-spring.profiles.active=@spring.profiles.active@,redis,kafka
+# Spring Profile
+spring.profiles.active=@spring.profiles.active@
 
-# Redis Configuration
-redis.host=localhost
-redis.port=6379
-redis.password=
+# SpringDoc OpenAPI Configuration
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.operationsSorter=alpha
+springdoc.swagger-ui.tagsSorter=alpha
 
-# Kafka Configuration
-kafka.bootstrap-servers=localhost:9092
-kafka.consumer.group-id=api-group
-
-# JWT Configuration
-jwt.secret=mySecretKey12345678901234567890
-jwt.expiration=3600000
-
-# Logging Configuration
-logging.level.root=INFO
+# Logging
+logging.level.org.springframework=INFO
 logging.level.com.example=DEBUG
-logging.level.org.springframework.web=DEBUG
-
+logging.level.org.springdoc=DEBUG
