--- a/pom.xml
+++ b/pom.xml
@@ -48,10 +48,10 @@
         <jjwt-jackson.version>0.11.5</jjwt-jackson.version>
 
         <!-- ========================================
-             Logging
+             Logging (SLF4J 2.x + Logback 1.3.x - CVE 수정)
              ======================================== -->
-        <slf4j.version>1.7.36</slf4j.version>
-        <logback.version>1.2.13</logback.version>
+        <slf4j.version>2.0.16</slf4j.version>
+        <logback.version>1.3.14</logback.version>
 
         <!-- ========================================
              Web & Servlet
@@ -72,15 +72,15 @@
         <thymeleaf-spring5.version>3.1.2.RELEASE</thymeleaf-spring5.version>
 
         <!-- ========================================
-             API Documentation
+             API Documentation (SpringDoc - Springfox 대체)
              ======================================== -->
-        <springfox.version>2.9.2</springfox.version>
+        <springdoc.version>1.8.0</springdoc.version>
 
         <!-- ========================================
              Messaging & Cache
              ======================================== -->
-        <!-- Kafka -->
-        <kafka.version>3.6.1</kafka.version>
+        <!-- Kafka (최신 버전 - CVE 수정) -->
+        <kafka.version>3.8.0</kafka.version>
         <spring-kafka.version>2.9.13</spring-kafka.version>
 
         <!-- Redis -->
@@ -97,19 +97,20 @@
         <!-- ========================================
              Utilities
              ======================================== -->
-        <commons-lang3.version>3.14.0</commons-lang3.version>
-        <lombok.version>1.18.34</lombok.version>
+        <commons-lang3.version>3.17.0</commons-lang3.version>
+        <lombok.version>1.18.36</lombok.version>
 
         <!-- ========================================
              AOP & AspectJ
              ======================================== -->
-        <aspectj.version>1.9.22</aspectj.version>
+        <aspectj.version>1.9.22.1</aspectj.version>
 
         <!-- ========================================
              Validation
              ======================================== -->
         <validation-api.version>2.0.1.Final</validation-api.version>
         <hibernate-validator.version>6.2.5.Final</hibernate-validator.version>
+        <!-- NOTE: Hibernate Validator 7.x+ requires Jakarta EE (javax -> jakarta namespace change) -->
 
         <!-- ========================================
              Testing
@@ -308,16 +309,11 @@
                 <version>${jackson.version}</version>
             </dependency>
 
-            <!-- Swagger -->
+            <!-- API Documentation (SpringDoc OpenAPI 3.0) -->
             <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-swagger2</artifactId>
-                <version>${springfox.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-swagger-ui</artifactId>
-                <version>${springfox.version}</version>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-ui</artifactId>
+                <version>${springdoc.version}</version>
             </dependency>
 
             <!-- Kafka -->
