swagger 보안 취약점 관련 수정

--- a/app/api/src/main/resources/application.properties
+++ b/app/api/src/main/resources/application.properties
@@ -1,14 +1,17 @@
 # Spring Profile
 spring.profiles.active=@spring.profiles.active@
 
-# SpringDoc OpenAPI Configuration
+# SpringDoc OpenAPI Configuration (개발 환경에서만 활성화)
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.operationsSorter=alpha
 springdoc.swagger-ui.tagsSorter=alpha
 
+# 보안 설정: Production에서 API Docs 완전 비활성화
+springdoc.api-docs.enabled=${SPRINGDOC_ENABLED:true}
+
 # Logging
 logging.level.org.springframework=INFO
 logging.level.com.example=DEBUG
-logging.level.org.springdoc=DEBUG
+
