--- a/app/api/pom.xml
+++ b/app/api/pom.xml
@@ -87,6 +87,10 @@
         <!-- SpringDoc OpenAPI (Development Only) -->
         <dependency>
             <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-webmvc-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
         </dependency>
 
