--- a/app/api/src/main/resources/application-production.properties
+++ b/app/api/src/main/resources/application-production.properties
@@ -1,21 +1,9 @@
-# Production Profile Configuration
+# Production Profile
 
-# Redis Configuration
-redis.host=redis-prod-server
-redis.port=6379
-redis.password=your-redis-password
+# 보안: API Documentation 완전 비활성화
+springdoc.api-docs.enabled=false
+springdoc.swagger-ui.enabled=false
 
-# Kafka Configuration
-kafka.bootstrap-servers=kafka-prod-server:9092
-kafka.consumer.group-id=api-group-prod
-
-# JWT Configuration
-jwt.secret=changeThisToSecureProductionKey1234567890123456
-jwt.expiration=3600000
-
-# Logging Configuration
-logging.level.root=WARN
+# Logging
 logging.level.com.example=INFO
-logging.level.org.springframework.web=INFO
-logging.level.org.springframework.security=WARN
-
+logging.level.org.springframework=WARN
