--- a/app/api/src/main/resources/application-development.properties
+++ b/app/api/src/main/resources/application-development.properties
@@ -28,3 +28,9 @@ logging.level.org.springframework.security=DEBUG
 # Swagger
 springfox.documentation.swagger.v2.path=/api-docs
 
+# 랭킹 설정
+ranking.refresh.enabled=true
+ranking.refresh.times=09:00,12:00,15:00,18:00,21:00
+ranking.cache.size=100
+ranking.cache.ttl=300
+
