--- a/app/api/src/main/resources/application-production.properties
+++ b/app/api/src/main/resources/application-production.properties
@@ -15,3 +15,9 @@ mci.serverUrl=http://production-db-server/api
 # Logging
 logging.level.com.example=INFO
 logging.level.org.springframework=WARN
+
+# 랭킹 설정
+ranking.refresh.enabled=true
+ranking.refresh.times=00:00,06:00,09:00,12:00,15:00,18:00,21:00
+ranking.cache.size=100
+ranking.cache.ttl=600
